--- a/package.json
+++ b/package.json
@@ -7,13 +7,18 @@
   "license": "MIT",
   "dependencies": {
     "express": "^4.17.1",
-    "socket.io": "^4.3.2"
+    "mongoose": "^6.0.13",
+    "reflect-metadata": "^0.1.13",
+    "socket.io": "^4.3.2",
+    "tsyringe": "^4.6.0",
+    "uuid": "^8.3.2"
   },
   "scripts": {
     "start:dev": "ts-node-dev src/server.ts"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
+    "@types/mongoose": "^5.11.97",
     "@types/socket.io": "^3.0.2",
     "ts-node-dev": "^1.1.8",
     "typescript": "^4.4.4"
